--- a/src/Orchard.Web/Web.config
+++ b/src/Orchard.Web/Web.config
@@ -18,9 +18,8 @@
     
 <!-- optional additional comma-separated list of folders for Modules or Themes -->
         <add key="Modules" value="~/Ibn_Modules"/>
-<!--
-        <add key="Themes" value="~/Themes/MoreThemes" />
--->
+        <add key="Themes" value="~/Ibn_Themes" />
+
     </appSettings>
     
     <system.web.webPages.razor>
