--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "src/Orchard.Web/Modules/nwazet.commerce"]
 	path = src/Orchard.Web/Modules/nwazet.commerce
 	url = https://baruch23@bitbucket.org/baruch23/nwazet.commerce-git.git
+[submodule "src/Orchard.Web/Modules/Contrib.Voting"]
+	path = src/Orchard.Web/Modules/Contrib.Voting
+	url = https://baruch23@bitbucket.org/baruch23/orchard_gallery-contrib.voting-git.git
