PJS bootstrap theme added as submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "src/Orchard.Web/Modules/Contrib.Voting"]
 	path = src/Orchard.Web/Modules/Contrib.Voting
 	url = https://baruch23@bitbucket.org/baruch23/orchard_gallery-contrib.voting-git.git
+[submodule "src/Orchard.Web/Themes/PJS.Bootstrap"]
+	path = src/Orchard.Web/Themes/PJS.Bootstrap
+	url = https://baruch23@bitbucket.org/baruch23/orchard_gallery-pjs.bootstrap.git
