--- a/src/Orchard.Web/Web.config
+++ b/src/Orchard.Web/Web.config
@@ -16,7 +16,7 @@
     
         <!-- optional additional comma-separated list of folders for Modules or Themes -->
         <!-- Note: Themes that are not under ~/Themes/ should have web.config with appropriate access permissions. -->
-        <add key="Modules" value="~/Ibn_Modules"/>
+        <add key="Modules" value="~/Ibn_Modules, ~/Gallery_Modules" />
         <add key="Themes" value="~/Ibn_Themes" />
     
     </appSettings>
