--- a/src/Orchard.Web/Config/log4net.config
+++ b/src/Orchard.Web/Config/log4net.config
@@ -6,6 +6,7 @@
   <root>
     <!-- Value of priority may be ALL, DEBUG, INFO, WARN, ERROR, FATAL, OFF. -->
     <priority value="WARN" />
+    <!--WARN-->
     <appender-ref ref="error-file" />
     <appender-ref ref="debug-file" />
   </root>
@@ -16,6 +17,14 @@
     <priority value="INFO" />
   </logger>
   -->
+  <!-- BN - tune down NHibernate
+  <logger name="NHibernate">
+    <!  - - Messages coming from Orchard are sent to the attached debugger. - - >
+    <appender-ref ref="debugger"/>
+    <! - - Note: if you put a ref=debugger into <root> element above and widen the priority to ALL or DEBUG,  then you will see nhibernate trace in the attached debugger as well. - - >
+    <priority value="WARN" />
+  </logger>
+-->
 
   <logger name="Orchard">
     <!-- Messages coming from Orchard are sent to the attached debugger. -->
@@ -61,7 +70,7 @@
     <!-- Prevents Orchard.exe from displaying locking debug messages. -->
     <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
     <layout type="log4net.Layout.PatternLayout">
-      <conversionPattern value="%date [%thread] %logger - %P{Tenant} - %message%newline" />
+      <conversionPattern value="%date %time [%thread] %logger - %P{Tenant} - %message%newline" />
     </layout>
   </appender>
 
@@ -81,7 +90,7 @@
       <levelMin value="ERROR" />
     </filter>
     <layout type="log4net.Layout.PatternLayout">
-      <conversionPattern value="%date [%thread] %logger - %P{Tenant} - %message%newline %P{Url}%newline" />
+      <conversionPattern value="%date %time [%thread] %logger - %P{Tenant} - %message%newline %P{Url}%newline" />
     </layout>
   </appender>
   
