--- a/.gitignore
+++ b/.gitignore
@@ -190,3 +190,4 @@ src/Orchard.Azure/Orchard.Azure.CloudService/Staging/
 */.vs/*
 src/Orchard.Web/Themes/PJS.Bootstrap/
 src/Orchard.Web/Gallery_modules/
+src/safe/
