--- a/.gitignore
+++ b/.gitignore
@@ -189,3 +189,9 @@ src/Orchard.Azure/Orchard.Azure.CloudService/Staging/
 !lib/**/*.*
 */.vs/*
 src/Rebracer.xml
+
+#ibn
+src/Orchard.Web/Themes/PJS.Bootstrap/
+src/Orchard.Web/Gallery_modules/
+src/safe/
+src/util/__pycache__/
