paths of databse files changed

--- a/.gitignore
+++ b/.gitignore
@@ -198,3 +198,4 @@ src/Orchard.Web/Themes/PJS.Bootstrap/
 src/Orchard.Web/Gallery_modules/
 src/safe/
 src/util/__pycache__/
+src/Orchard.Web/App_Data2/
