debug - Remoteonly, solution=orchard_ibn

--- a/src/Orchard.Web/Web.config
+++ b/src/Orchard.Web/Web.config
@@ -87,7 +87,7 @@
         <authentication mode="Forms">
             <forms loginUrl="~/Users/Account/AccessDenied" timeout="2880" />
         </authentication>
-        <customErrors mode="Off" />
+        <customErrors mode="RemoteOnly" />
         <pages>
             <namespaces>
                 <add namespace="System.Collections.Generic" />
